Fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -122,6 +122,9 @@ p {
 .btn:hover {
   background-color: var(--primary-color);
 }
+.about-section img {
+  border-radius: 30px;
+}
 
 @media (max-width: 576px) {
   .hero h1 {
@@ -154,14 +157,19 @@ p {
     margin: 0 20px;
   }
   .about-section{
-    padding: 0 !important;
+    padding: 0 15px !important;
+  }
+  .about-section h1 {
+    font-size: 58px !important;
   }
   .about-section h2 {
     margin-bottom: 5px;
   }
   .about-section p {
     margin-bottom: 20px;
+    font-size: 14px !important;
   }
+
   .description {
     padding: 10px !important;
     text-align: center;
@@ -170,6 +178,10 @@ p {
     margin-top: 20px;
     font-size: 54px;
   }
+  .about-section img {
+    margin-top: 35px;
+  }
+
 }
 .description {
   padding: 120px 60px;
